# cole-portable-core

./: CHANGELOG.md  README.md  SPEC.md  pyproject.toml  verify-node.mjs
.github/workflows/: conformance.yml
cole_portable_core/: __init__.py  canon.py  canonical.py  core.py  receipt.py
schemas/: cole-measurement-receipt.schema.json
scripts/: generate_vectors.py
tests/: helpers.py  test_canonical.py  test_core.py  test_receipt.py
vectors/: checkpoint-anchor-input-disclosure.json  checkpoint-anchor-input-receipt.json  checkpoint-input-disclosure.json  checkpoint-input-receipt.json  checkpoint-measurement-receipt.json  checkpoint-previous-input-disclosure.json  checkpoint-previous-input-receipt.json  cole-measurement-receipt.schema.json  empty-input-disclosure.json  empty-input-receipt.json  empty-measurement-receipt.json  input-disclosure.json  input-receipt.json  invalid-tampered-measurement.json  measurement-receipt.json  previous-input-disclosure.json  previous-input-receipt.json
