[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cole-portable-core"
version = "0.1.1"
description = "Deterministic derived coherence measurement for OLP Wire Canon receipts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["cryptography>=41"]

[tool.setuptools.packages.find]
include = ["cole_portable_core*"]
